--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
 body {
   background-color: #6643b5;
-  font-family: "Dosis", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 a {
   color: #6643b5;
 }
-h1,
+h1 {
+  text-align: center;
+  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  color: transparent;
+  text-align: center;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 footer {
   text-align: center;
 }
@@ -78,11 +86,21 @@ input::placeholder {
 .weather-app-condition {
   font-size: 20px;
   letter-spacing: 0.2rem;
+  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  color: transparent;
+  text-align: center;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .weather-app-temperature {
   font-size: 70px;
   margin: 5px auto;
   font-weight: bold;
+  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  color: transparent;
+  text-align: center;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .condition-icon {
   font-size: 90px;
@@ -92,10 +110,20 @@ input::placeholder {
   font-size: 35px;
   font-weight: bold;
   text-align: center;
+  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  color: transparent;
+  text-align: center;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .weather-app-timestamp {
   font-size: 20px;
   letter-spacing: 0.1rem;
+  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  color: transparent;
+  text-align: center;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .weather-app-details {
   display: block;
@@ -111,4 +139,9 @@ input::placeholder {
   text-align: center;
   width: 150px;
   padding: 10px;
+  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  color: transparent;
+  text-align: center;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
