--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ input::placeholder {
   color: #d5def5;
   border: none;
   border-radius: 5px;
-  padding: 15px 25px;
+  padding: 15px 27px;
   font-size: 16px;
   transition: all 250ms ease-in-out;
 }
@@ -96,6 +96,7 @@ input::placeholder {
 }
 .temperature-unit {
   display: flex;
+  margin: 5px 0 0 0;
 }
 .weather-app-temperature {
   font-size: 70px;
@@ -119,13 +120,13 @@ input::placeholder {
 }
 
 .condition-icon {
-  font-size: 90px;
-  margin: 10px;
+  width: 200px;
+  height: 200px;
 }
 .weather-app-city {
   font-size: 35px;
+  padding: 0 0 5px 0;
   font-weight: bold;
-  text-align: center;
   background-image: linear-gradient(0deg, transparent 0, white 100%);
   color: transparent;
   text-align: center;
