--- a/src/index.css
+++ b/src/index.css
@@ -6,23 +6,22 @@ a {
   color: #6643b5;
 }
 h1 {
-  text-align: center;
   background-image: linear-gradient(0deg, transparent 0, white 100%);
   color: transparent;
+  margin: 5px 0 10px 0;
   text-align: center;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
-footer {
-  text-align: center;
-}
 header {
-  padding: 20px 0 20px 0;
+  padding: 10px 0 10px 0;
 }
 footer {
-  padding: 40px 0 0 0;
+  padding: 30px 0 0 0;
   font-size: 14px;
+  text-align: center;
+  color: white;
+  opacity: 65%;
 }
 
 .weather-forecast {
@@ -97,11 +96,12 @@ input::placeholder {
 .temperature-unit {
   display: flex;
   margin: 5px 0 0 0;
+  height: 80px;
 }
 .weather-app-temperature {
   font-size: 70px;
   font-weight: bold;
-  margin: 5px 0;
+  margin-top: 5px;
   background-image: linear-gradient(0deg, transparent 0, white 100%);
   color: transparent;
   text-align: center;
@@ -122,6 +122,7 @@ input::placeholder {
 .condition-icon {
   width: 200px;
   height: 200px;
+  filter: drop-shadow(0px 0px 20px rgb(255, 255, 255));
 }
 .weather-app-city {
   font-size: 35px;
