Created HTML for weather forecast display

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ footer {
   opacity: 65%;
 }
 
-.weather-forecast {
+.weather-app {
   background: #8594e4;
   margin: 30px auto;
   padding: 40px;
