--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ a {
   color: #6643b5;
 }
 h1 {
-  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  background-image: linear-gradient(0deg, transparent 0, #f2f2f2 100%);
   color: transparent;
   margin: 5px 0 10px 0;
   text-align: center;
@@ -16,14 +16,9 @@ h1 {
 header {
   padding: 10px 0 10px 0;
 }
-footer {
-  padding: 30px 0 0 0;
-  font-size: 14px;
-  text-align: center;
-  color: white;
-  opacity: 65%;
+main {
+  padding-bottom: 25px;
 }
-
 .weather-app {
   background: #8594e4;
   margin: 30px auto;
@@ -73,7 +68,7 @@ input::placeholder {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px 0;
+  border-bottom: 1px solid #f9f7fe33;
 }
 .temperature-container {
   display: flex;
@@ -87,7 +82,7 @@ input::placeholder {
 .weather-app-condition {
   font-size: 20px;
   letter-spacing: 0.2rem;
-  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  background-image: linear-gradient(0deg, transparent 0, #f2f2f2 100%);
   color: transparent;
   text-align: center;
   -webkit-background-clip: text;
@@ -102,7 +97,7 @@ input::placeholder {
   font-size: 70px;
   font-weight: bold;
   margin-top: 5px;
-  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  background-image: linear-gradient(0deg, transparent 0, #f2f2f2 100%);
   color: transparent;
   text-align: center;
   -webkit-background-clip: text;
@@ -112,7 +107,7 @@ input::placeholder {
   padding-top: 5px;
   margin-top: 5px;
   font-size: 50px;
-  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  background-image: linear-gradient(0deg, transparent 0, #f2f2f2 100%);
   color: transparent;
   text-align: center;
   -webkit-background-clip: text;
@@ -128,7 +123,7 @@ input::placeholder {
   font-size: 35px;
   padding: 0 0 5px 0;
   font-weight: bold;
-  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  background-image: linear-gradient(0deg, transparent 0, #f2f2f2 100%);
   color: transparent;
   text-align: center;
   -webkit-background-clip: text;
@@ -137,7 +132,7 @@ input::placeholder {
 .weather-app-timestamp {
   font-size: 20px;
   letter-spacing: 0.1rem;
-  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  background-image: linear-gradient(0deg, transparent 0, #f2f2f2 100%);
   color: transparent;
   text-align: center;
   -webkit-background-clip: text;
@@ -156,10 +151,45 @@ input::placeholder {
 .humidity-levels {
   text-align: center;
   width: 150px;
-  padding: 10px;
-  background-image: linear-gradient(0deg, transparent 0, white 100%);
+  padding: 5px 10px 10px 10px;
+  background-image: linear-gradient(0deg, transparent 0, #f2f2f2 100%);
   color: transparent;
-  text-align: center;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+.weather-forecast-date,
+.weather-forecast-temperatures {
+  color: #f2f2f2;
+  opacity: 80%;
+}
+.weather-forecast-date {
+  text-align: center;
+  margin-bottom: 5px;
+}
+.weather-forecast-icon {
+  font-size: 40px;
+  text-align: center;
+}
+.weather-forecast-temperatures {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+.weather-forecast-temperature {
+  padding: 0 8px;
+}
+
+footer {
+  border-top: 1px solid #f9f7fe33;
+  padding: 30px 0 0 0;
+  font-size: 14px;
+  text-align: center;
+  color: white;
+  opacity: 65%;
 }
